--- a/events.html
+++ b/events.html
@@ -5,7 +5,7 @@
 
     <title>Korv Kiosk Mariaplan Göteborg </title>
 
-    <link rel="stylesheet" type="text/css" href="KKStyle.css">
+    <link rel="stylesheet" type="text/css" href="kkstyle.css">
 
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
@@ -48,7 +48,7 @@
             <!-- EVENT IMG -->
 
             
-            <img src="Pics/events2.jpg"  class="show">
+            <img src="pics/events2.jpg"  class="show">
 
             
 
